# portal

./: .gitignore  Cargo.toml  README.org  flake.nix  index-1fbf04ee48fca9f2.js  index-1fbf04ee48fca9f2_bg.wasm  index-9e0fb7de83af501c.js  index-9e0fb7de83af501c_bg.wasm  index.html  stylesheet-1b3561a170604b9c.css  stylesheet-ad484bf8955f223.css
.github/workflows/: cd.yaml
src/: main.rs
src/components/: feedback.rs  footer.rs  main_content.rs  mod.rs  nav.rs  project_item.rs  project_list.rs
src/models/: mod.rs  project.rs  state.rs
src/pages/: home_page.rs  mod.rs  projects_page.rs
src/routes/: routes.rs
styles/: stylesheet.css
