[package]
name = "portal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen-futures = "0.4.30"
serde = "1.0.136"
serde_json = "1.0.79"
gloo = "0.7.0"
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yewdux = { git = "https://github.com/intendednull/yewdux.git" }
yewdux-functional = "0.1.0"
yew-router = { git = "https://github.com/yewstack/yew.git" }
ybc = "0.2.1"
